--- a/options.html
+++ b/options.html
@@ -51,6 +51,56 @@
       margin-bottom: 0;
       flex-shrink: 0; /* 防止label被压缩 */
     }
+
+    /* --- 新增：开关样式 --- */
+    .toggle-switch-group {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .toggle-switch-group label {
+      margin-bottom: 0;
+    }
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 28px;
+    }
+    .switch input { 
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 28px;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 20px;
+      width: 20px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    input:checked + .slider {
+      background-color: #4CAF50;
+    }
+    input:checked + .slider:before {
+      transform: translateX(22px);
+    }
+    /* --- 开关样式结束 --- */
     
     /* Token 列表样式 */
     #tokenListHeader {
@@ -154,6 +204,15 @@
     </div>
   </div>
   
+  <div class="form-group">
+    <div class="toggle-switch-group">
+      <label for="contextMenuEnabled" data-i18n="contextMenuLabel">开启右键发送</label>
+      <label class="switch">
+        <input type="checkbox" id="contextMenuEnabled">
+        <span class="slider"></span>
+      </label>
+    </div>
+  </div>
   <div class="form-group">
     <label for="gotifyUrl" data-i18n="serverAddressLabel">Gotify服务器地址:</label>
     <input type="url" id="gotifyUrl" data-i18n-placeholder="serverAddressPlaceholder" placeholder="http://127.0.0.1:8080">
