--- a/popup.html
+++ b/popup.html
@@ -152,6 +152,15 @@
       color: var(--color-danger);
       display: block;
     }
+    /* 为错误消息中的链接添加样式 */
+    .error a {
+      color: var(--color-primary);
+      text-decoration: underline;
+      font-weight: 500;
+    }
+    .error a:hover {
+      color: var(--color-primary-dark);
+    }
     .no-config {
       padding: 24px 20px;
       background-color: #fff8e1;
