--- a/options.html
+++ b/options.html
@@ -381,6 +381,13 @@
           <option value="10" data-i18n="priorityOption10">10 (最高)</option>
         </select>
       </div>
+      
+      <div class="flex-item priority-item" id="contextMenuTokenContainer">
+        <label for="contextMenuToken" data-i18n="contextMenuTokenLabel">右键推送环境选择:</label>
+        <select id="contextMenuToken">
+          <!-- 选项将通过JS动态填充 -->
+        </select>
+      </div>
     </div>
   </div>
 
