--- a/html/options.html
+++ b/html/options.html
@@ -13,8 +13,8 @@
     <div class="lang-switcher-group">
       <label for="langSwitcher" data-i18n="langLabel">语言:</label>
       <select id="langSwitcher">
-        <option value="en">English</option>
-        <option value="zh_CN">简体中文</option>
+        <option value="en" data-i18n="langOptionEn">English</option>
+        <option value="zh_CN" data-i18n="langOptionZh">简体中文</option>
       </select>
     </div>
   </div>
@@ -85,7 +85,6 @@
   
   <div id="status" class="status" data-i18n="saveSuccessMsg">配置已保存</div>
 
-  <script src="../js/i18n.js"></script>
-  <script src="../js/options.js"></script>
+  <script type="module" src="../js/options.js"></script>
 </body>
 </html>
