--- a/html/popup.html
+++ b/html/popup.html
@@ -62,7 +62,6 @@
     </div>
   </div>
 
-  <script src="../js/i18n.js"></script>
-  <script src="../js/popup.js"></script>
+  <script type="module" src="../js/popup.js"></script>
 </body>
 </html>
