--- a/html/popup.html
+++ b/html/popup.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="popupTitle">Gotify Push Tool</title>
-  <link rel="stylesheet" href="../css/popup.css">
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   
@@ -62,6 +62,6 @@
     </div>
   </div>
 
-  <script type="module" src="../js/popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
