--- a/html/options.html
+++ b/html/options.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="optionsTitle">Gotify Push Tool - Settings</title>
-  <link rel="stylesheet" href="../css/options.css">
+  <link rel="stylesheet" href="options.css">
 </head>
 <body>
   <div class="header">
@@ -85,6 +85,6 @@
   
   <div id="status" class="status" data-i18n="saveSuccessMsg">配置已保存</div>
 
-  <script type="module" src="../js/options.js"></script>
+  <script type="module" src="options.js"></script>
 </body>
 </html>
