--- a/html/popup.html
+++ b/html/popup.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="popupTitle">Gotify Push Tool</title>
+    <link rel="stylesheet" href="../css/variables.css" />
+    <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/popup.css" />
   </head>
   <body>
@@ -63,7 +65,7 @@
       <div id="status" class="status"></div>
     </div>
 
-    <div id="noConfig" style="display: none">
+    <div id="noConfig" class="hidden">
       <div class="no-config">
         <span data-i18n="noConfigMsg">请先</span>
         <a href="#" id="configLink" data-i18n="noConfigLink">配置</a>
